--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,21 @@ body
 }
 /* font-size */
 .fs-12{font-size: 12px;line-height: 20px;}
+.fs-14{font-size: 14px;}
+
 /* font-color */
 .text-green{
     color: rgb(11, 117, 43);
 }
+.bg-red{background-color: #d60000;}
 .bg-black{background-color: #070707;}
+section{
+    padding: 60px 0px;
+}
+.truncate-1 {-webkit-line-clamp: 1;}
+.truncate-2 {-webkit-line-clamp: 2;}
+.truncate-3 {-webkit-line-clamp: 3;}
+.truncate-4 {-webkit-line-clamp: 4;}
+.truncate-5 {-webkit-line-clamp: 5;}
+.truncate-6 {-webkit-line-clamp: 6;}
+.truncate-1, .truncate-2, .truncate-3, .truncate-4, .truncate-5, .truncate-5 {overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-box-orient: vertical;}
