--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,8 @@ body
 .fs-14{font-size: 14px;}
 
 /* font-color */
-.text-green{
-    color: rgb(11, 117, 43);
-}
+.text-green{color: rgb(11, 117, 43);}
+.text-black{color: #000 !important;}
 .bg-red{background-color: #d60000;}
 .bg-black{background-color: #070707;}
 section{
