--- a/src/assets/style/public.css
+++ b/src/assets/style/public.css
@@ -217,3 +217,81 @@
 color: #070707;
 text-decoration: none;
 }
+
+
+footer{
+    position: relative;
+    
+  }
+  .footer-top {
+      width: 100%;
+      display: flex;
+      padding: 60px 0px 0px 0px;
+      flex-direction: column;
+      background: #000000f5 !important;
+      color: #ececec !important;
+    }
+    
+    .social img {
+      margin: 10px;
+      width: 20px;
+    }
+    .socialMedia svg {
+      color: white;
+      margin: 20px;
+      font-size: 70px;
+      cursor: pointer;
+    }
+    
+    .footer p {
+      color: #fff !important;
+      opacity: 1;
+      font-size: 1rem; 
+      margin-bottom: 20px;
+    }    
+    .footer-contact {
+      display: block;
+      list-style: none;
+      padding: 0px 0px 0px 20px;
+      height: fit-content;
+    }
+    .footer-contact li {
+      padding: 6px 0px;
+      color: #fff;
+      list-style: circle;
+    }
+    .footer-contact li.active {
+      color: #fff;
+    }
+    .widget-title {
+      font-size: 22px;
+      line-height: 33px;
+      font-weight: 800;
+    }
+    .contact-right {
+      padding: 10px 0px;
+    
+      display: block;
+    }
+    .contact-right li {
+      display: block;
+      list-style: none;
+      margin-bottom: 20px;
+    }
+    .contact-right li a {
+      color: #fff !important;
+      opacity: 1;
+      display: inline-flex;
+      font-size: 1rem;
+    }
+    .footer-contact li:hover {
+      color: #fff;
+    }
+    footer .footer-bottom{
+      background-color: #ececec;
+      color: #000000f5 !important;
+    }
+    footer .border-left{
+        border-right: 1px solid #b1b1b167;
+        height: fit-content;
+    }
