--- a/src/assets/style/public.css
+++ b/src/assets/style/public.css
@@ -217,8 +217,20 @@
 color: #070707;
 text-decoration: none;
 }
-
-
+.delivary-sec .delivary-cont-card{
+    background-color: #bcd8f870 !important;
+    padding: 25px 20px;
+    border: 1px solid #d8d8d88c;
+    border-radius: 5px;
+}
+.order-conform-sec .pro-img
+{
+    max-width: 200px;
+    width: 100%;
+    max-height: 200px;
+    object-fit: contain;
+}
+/* footer */
 footer{
     position: relative;
     
